[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'project.sten'
authors = [{name = 'Serhat Çelik'}]
description = 'LSB-based image steganography tool'
requires-python = '~=3.9'
keywords = ['sten', 'cryptography', 'steganography']
license = {text = 'GPLv3'}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
]
dynamic = ['dependencies', 'version']

[project.gui-scripts]
sten = 'sten.__main__:main'

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}
version = {attr = 'sten.__version__.__version__'}
